--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="foot__column foco">
                             <div class="foco__title foot__title">Navigation</div>
                             <ul class="foco__list">
-                                <li class="foco__link"><a href="#about">About</a></li>
+                                <li class="foco__link"><a href="#about" >About</a></li>
                                 <li class="foco__link"><a href="#portfolio">Portfolio</a></li>
                                 <li class="foco__link"><a href="#price">Price</a></li>
                                 <li class="foco__link"><a href="#myworks">My works</a></li>
@@ -234,11 +234,11 @@
                         </div>
                         <div class="foot__column middle">
                             <ul class="middle__list">
-                                <li class="middle__link"><a href="" class="_icon-phone"></a></li>
-                                <li class="middle__link"><a href="" class="_icon-instagram"></a></li>
-                                <li class="middle__link"><a href="" class="_icon-telegram"></a></li>
-                                <li class="middle__link"><a href="" class="_icon-viber"></a></li>
-                                <li class="middle__link"><a href="" class="_icon-vk"></a></li>
+                                <li class="middle__link"><a href="tel:+79220031508" class="_icon-phone"></a></li>
+                                <li class="middle__link"><a href="https://instagram.com/magic_brows72?igshid=NTc4MTIwNjQ2YQ==" target="_blank"  class="_icon-instagram"></a></li>
+                                <li class="middle__link"><a href="https://t.me/MagicBrows72"  target="_blank" class="_icon-telegram"></a></li>
+                                <li class="middle__link"><a href=""  target="_blank" class="_icon-viber"></a></li>
+                                <li class="middle__link"><a href="https://vk.com/id318006107" target="_blank" class="_icon-vk"></a></li>
                             </ul>
                         </div>
                         <div class="foot__column right">
