--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 <li class="middle__link"><a href="tel:+79220031508" class="_icon-phone"></a></li>
                                 <li class="middle__link"><a href="https://instagram.com/magic_brows72?igshid=NTc4MTIwNjQ2YQ==" target="_blank"  class="_icon-instagram"></a></li>
                                 <li class="middle__link"><a href="https://t.me/MagicBrows72"  target="_blank" class="_icon-telegram"></a></li>
-                                <li class="middle__link"><a href=""  target="_blank" class="_icon-viber"></a></li>
+                                <li class="middle__link"><a href="viber://chat?number=%2B79220031508"  target="_blank" class="_icon-viber"></a></li>
                                 <li class="middle__link"><a href="https://vk.com/id318006107" target="_blank" class="_icon-vk"></a></li>
                             </ul>
                         </div>
