--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper mySwiper" id="myworks">
+                <div class="swiper mySwiper block" id="myworks">
                     <div class="swiper__title wow fadeInLeft block__title">My works</div>
                     <div class="swiper-wrapper wow fadeIn">
                       <div class="swiper-slide">
@@ -190,7 +190,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="form">
+                <div class="form block">
                     <div class="form__title block__title wow fadeInLeft">Form
                         <div class="form__circle">
                             <img src="./img/circle.png" alt="">
