--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <div class="form__content feedback  wow fadeInUp" id="load"> 
                             <div class="feedback__text">Заполни небольшую форму и я обязательно с тобой свяжусь</div>
                             <div class="feedback__forma">
-                                <form action="sendmail.php"  id="form" class="feedback__items">
+                                <form action=""  id="form" class="feedback__items">
                                     <input type="text" class="feedback__item _req _name form__input" name="name" placeholder="Твоё имя">
                                     <input type="tel" class="feedback__item _req _telephone form__input" name="phone" placeholder="8 (999) 999 99 99">
                                     <textarea id="" cols="30" rows="10" class="feedback__item _req form__input" name="message" placeholder="Желаемая процедура или сообщение..."></textarea>
