--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="about__body block__body">
                         <div class="about__text block__text wow fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
                         <div class="about_image block__image wow fadeInRight">
-                           <img src="./img/kamila.JPG" alt="">
+                           <img src="./img/kamila.webp" alt="">
                         </div>
                     </div>
                 </div>
@@ -43,22 +43,22 @@
                     <div class="portfolio__circle block__title-circle circle"></div>
                     <div class="portfolio__items">
                          <div class="portfolio__item wow fadeInUp">
-                            <img src="./img/kamila.JPG" alt="" srcset="">
+                            <img src="./img/kamila.webp" alt="" srcset="">
                         </div>
                         <div class="portfolio__item wow fadeInRight">
-                            <img src="./img/kamila.JPG" alt="" srcset="">
+                            <img src="./img/kamila.webp" alt="" srcset="">
                         </div>
                         <div class="portfolio__item portfolio__item-big wow fadeInLeft">
-                            <img src="./img/kamila.JPG" alt="" srcset="">
+                            <img src="./img/kamila.webp" alt="" srcset="">
                         </div>
                         <div class="portfolio__item wow fadeInUp">
-                            <img src="./img/kamila.JPG" alt="" srcset="">
+                            <img src="./img/kamila.webp" alt="" srcset="">
                         </div>
                         <div class="portfolio__item wow fadeInRight">
-                            <img src="./img/kamila.JPG" alt="" srcset="">
+                            <img src="./img/kamila.webp" alt="" srcset="">
                         </div>
                         <div class="portfolio__item  portfolio__item-big wow fadeInLeft last_item">
-                            <img src="./img/kamila.JPG" alt="" srcset="">
+                            <img src="./img/kamila.webp" alt="" srcset="">
                         </div>
                           
                     </div>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                         <div class="price__image wow fadeInRight">
-                            <img src="./img/kamila.JPG" alt="" srcset="">
+                            <img src="./img/kamila.webp" alt="" srcset="">
                         </div>
                     </div>
                 </div>
@@ -129,75 +129,75 @@
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
                             <h1 class="box__title">Gome</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
-                        <img src="./img/kamila.JPG" alt="">
+                        <img src="./img/kamila.webp" alt="">
                       </div>
                     </div>
                 </div>
                 <div class="form block">
                     <div class="form__title block__title wow fadeInLeft">Form
                         <div class="form__circle">
-                            <img src="./img/circle.png" alt="">
+                            <img src="./img/circle.webp" alt="">
                         </div>
                     </div>
                     <div class="form__body">
                         <div class="form__logo  wow fadeInDown">
-                            <img src="./img/kamila.JPG" alt="">
+                            <img src="./img/kamila.webp" alt="">
                         </div>
                         <div class="form__content feedback  wow fadeInUp" id="load"> 
                             <div class="feedback__text">Заполни небольшую форму и я обязательно с тобой свяжусь</div>
@@ -251,6 +251,13 @@
             </div>
         </footer>
 
+   </div>
+   <div class="popUp">
+    <div class="popUp__text">Твоя формочка отправилась</br> ко мне на почту ❤️</div>
+    <div class="popUp__image wow tada">
+        <img src="./img/like.webp" alt="" srcset="">
+    </div>
+    <button class="popUp__btn feedback__buttom" id="popbtn">OK</button>
    </div>
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
