--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
 
    </div>
    <div class="popUp">
-    <div class="popUp__text">Твоя формочка отправилась</br> ко мне на почту ❤️</div>
-    <div class="popUp__image wow tada">
-        <img src="./img/like.webp" alt="" srcset="">
-    </div>
-    <button class="popUp__btn feedback__buttom" id="popbtn">OK</button>
+        <div class="popUp__text">Твоя формочка отправилась</br> ко мне на почту ❤️</div>
+        <div class="popUp__image">
+            <img src="./img/like.webp" alt="like">
+        </div>
+        <button class="popUp__btn feedback__buttom" id="popbtn">OK</button>
    </div>
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
