--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
    </div>
    <div class="popUp">
         <div class="popUp__text">Твоя формочка отправилась</br> ко мне на почту ❤️</div>
-        <div class="popUp__image">
+        <div class="popUp__image wow tada">
             <img src="./img/like.webp" alt="like">
         </div>
         <button class="popUp__btn feedback__buttom" id="popbtn">OK</button>
