--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                     <li>
                       <a href="https://instagram.com/magic_brows72?igshid=NTc4MTIwNjQ2YQ==" target="_blank" class="menu__sub-link _icon-instagram"></a>
                     </li>
+                    <li>
+                        <a href="viber://chat?number=%2B79220031508"  target="_blank" class="menu__sub-link _icon-viber"></a>
+                      </li>
+                      <li>
+                        <a href="https://vk.com/id318006107"  target="_blank" class="menu__sub-link _icon-vk"></a>
+                      </li>
                   </ul>
                 </li>
 
