--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Сайт мастера бровей и макияжа в ярково и тюмени с набором фото работ и прайс листом на услуги по макияжу и оформлению бровей. Записывайтесь на макияж и перманент бровей">
+    <meta name="keywords" content="ярково, брови, макияж, перманент, ресницы">
     <link rel="stylesheet" href="./css/iconsfont.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/icons/favicon.ico" type="image/x-icon">
@@ -73,7 +75,6 @@
             <div class="full-screen__body">
                 <div class="full-screen__title">KAMILA SHAYAKHMETOVA</div>
                 <div class="full-screen__text">Magic Brows</div>
-                <!-- <div class="full-screen__link"><a href="#portfolio">VIEW PORTFOLIO</a></div> -->
             </div>
             <div class="full-screen__photo">
                 <img src="" alt="">
@@ -87,7 +88,7 @@
                     </div>
                     <div class="about__circle block__title-circle circle  wow fadeInLeftBig"></div>
                     <div class="about__body block__body">
-                        <div class="about__text block__text wow fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
+                        <div class="about__text block__text wow fadeInLeft"><h1>Брови ярково тюмень перманентный макияж тюмень ресницы оформление и окрашивание бровей</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
                         <div class="about_image block__image wow fadeInRight">
                            <img src="./img/kamila.webp" alt="">
                         </div>
