modified:   css/animate.css

--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
               <ul class="menu__list">
                 <li>
                   <a href="#" data-goto=".about" class="menu__link"
-                    >About me</a
+                    >Обо мне</a
                   >
                 </li>
                 <li>
                   <a href="#" data-goto=".portfolio" class="menu__link"
-                    >Portfolio</a
+                    >Портфолио</a
                   >
                 </li>
                 <li>
                   <a href="#" data-goto=".price" class="menu__link"
-                    >Price</a
+                    >Прайс</a
                   >
                 </li>
                 <li>
                     <a href="#" class="menu__link" data-goto=".swiper"
-                      >My works</a
+                      >Мои работы</a
                     >
                   </li>
                 <li id="touch">
                   <a href="#" class="menu__link" 
-                    >Contacts</a
+                    >Контакты</a
                   >
                   <span class="menu__arrow"></span>
                   <ul class="menu__sub-list">
@@ -84,18 +84,24 @@
             <div class="content">
                 <div class="about block" id="about">
                     <div class="about__title block__title">
-                        About me
+                        Обо мне
                     </div>
                     <div class="about__circle block__title-circle circle  wow fadeInLeftBig"></div>
                     <div class="about__body block__body">
-                        <div class="about__text block__text wow fadeInLeft"><h1>Брови ярково тюмень перманентный макияж тюмень ресницы оформление и окрашивание бровей</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
+                        <div class="about__text block__text wow fadeInLeft">
+                            <h1 class="wow fadeInLeft">Привет ! Меня зовут Камила Шаяхметова и я являюсь мастером бровистом, а так же визажистом.</h1>
+                            <p class="wow fadeInLeft">Занимаюсь наведением красоты с 2020 года. За это время брови стали моей любовью. Могу сделать с ними абсолютно все, включая перманент.</p>
+                            <p class="wow fadeInLeft">Не так давно освоила техники макияжа, и, думаю, вполне успешно. Можешь убедиться в этом в моем портфолио.</p>
+                            <p class="wow fadeInLeft">Ознакомится с актуальным прайсом можно так же на этом сайте. Здесь даже есть форма обратной связи на случай, если ты все еще не была в моей студии.</p>
+                            <p class="wow fadeInLeft">Скорее записывайся и экономь свое драгоценное время по утрам &#128522;</p>
+                           </div>    
                         <div class="about_image block__image wow fadeInRight">
                            <img src="./img/kamila.webp" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="portfolio block" id="portfolio">
-                    <div class="portfolio__title block__title">Portfolio</div>
+                    <div class="portfolio__title block__title">Портфолио</div>
                     <div class="portfolio__circle block__title-circle circle"></div>
                     <div class="portfolio__items">
                          <div class="portfolio__item wow fadeInUp">
@@ -120,7 +126,7 @@
                     </div>
                 </div>
                 <div class="price block" id="price">
-                    <div class="price__title block__title wow fadeInLeft">Price</div>
+                    <div class="price__title block__title wow fadeInLeft">Прайс</div>
                     <div class="price__circle block__title-circle circle wow fadeInRight"></div>
                     <div class="price__body">
                         <div class="price__table table wow fadeInUp">
@@ -178,7 +184,7 @@
                     </div>
                 </div>
                 <div class="swiper mySwiper block" id="myworks">
-                    <div class="swiper__title wow fadeInLeft block__title">My works</div>
+                    <div class="swiper__title wow fadeInLeft block__title">Мои работы</div>
                     <div class="swiper-wrapper wow fadeIn">
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
@@ -189,56 +195,56 @@
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
-                            <h1 class="box__title">Gome</h1>
+                            <h1 class="box__title">Оформление</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
                         <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
-                            <h1 class="box__title">Gome</h1>
+                            <h1 class="box__title">Окрашивание</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
                         <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
-                            <h1 class="box__title">Gome</h1>
+                            <h1 class="box__title">Перманент бровей</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
                         <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
-                            <h1 class="box__title">Gome</h1>
+                            <h1 class="box__title">Дневной макияж</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
                         <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
-                            <h1 class="box__title">Gome</h1>
+                            <h1 class="box__title">Вечерний макияж</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
                         <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
-                            <h1 class="box__title">Gome</h1>
+                            <h1 class="box__title">Оформление</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
                         <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
-                            <h1 class="box__title">Gome</h1>
+                            <h1 class="box__title">Оформление</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
                         <img src="./img/kamila.webp" alt="">
                       </div>
                       <div class="swiper-slide">
                         <div class="swiper-slide__box box">
-                            <h1 class="box__title">Gome</h1>
+                            <h1 class="box__title">Вечерний макияж</h1>
                             <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                         </div>
                         <img src="./img/kamila.webp" alt="">
@@ -246,7 +252,7 @@
                     </div>
                 </div>
                 <div class="form block">
-                    <div class="form__title block__title wow fadeInLeft">Form
+                    <div class="form__title block__title wow fadeInLeft">Форма
                         <div class="form__circle">
                             <img src="./img/circle.webp" alt="">
                         </div>
@@ -281,10 +287,10 @@
                         <div class="foot__column foco">
                             <div class="foco__title foot__title">Navigation</div>
                             <ul class="foco__list">
-                                <li class="foco__link"><a href="#about" >About</a></li>
-                                <li class="foco__link"><a href="#portfolio">Portfolio</a></li>
-                                <li class="foco__link"><a href="#price">Price</a></li>
-                                <li class="foco__link"><a href="#myworks">My works</a></li>
+                                <li class="foco__link"><a href="#about" >Обо мне</a></li>
+                                <li class="foco__link"><a href="#portfolio">Портфолио</a></li>
+                                <li class="foco__link"><a href="#price">Прайс</a></li>
+                                <li class="foco__link"><a href="#myworks">Мои работы</a></li>
                             </ul>
                         </div>
                         <div class="foot__column middle">
