--- a/index.html
+++ b/index.html
@@ -285,13 +285,14 @@
                 <div class="foot">
                     <div class="foot_columns">
                         <div class="foot__column foco">
-                            <div class="foco__title foot__title">Navigation</div>
-                            <ul class="foco__list">
-                                <li class="foco__link"><a href="#about" >Обо мне</a></li>
-                                <li class="foco__link"><a href="#portfolio">Портфолио</a></li>
-                                <li class="foco__link"><a href="#price">Прайс</a></li>
-                                <li class="foco__link"><a href="#myworks">Мои работы</a></li>
-                            </ul>
+                            <div class="foco__title foot__title"></div>
+                            <div class="left__column">
+                                <div class="left__column-text">
+                                    <p>Сайт разработан</p>
+                                    <p><a href="">abdulovdb</a></p>
+                                    <p>Все права защищены</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="foot__column middle">
                             <ul class="middle__list">
