--- a/index.html
+++ b/index.html
@@ -285,12 +285,11 @@
                 <div class="foot">
                     <div class="foot_columns">
                         <div class="foot__column foco">
-                            <div class="foco__title foot__title"></div>
+                            <div class="foco__title foot__title">Сайт разработан</div>
                             <div class="left__column">
                                 <div class="left__column-text">
-                                    <p>Сайт разработан</p>
-                                    <p><a href="">abdulovdb</a></p>
-                                    <p>Все права защищены</p>
+                                    <p><span class="formobile">Сайт разработан </span><a href="https://t.me/ABDULOVDB" target="_blank">abdulovdb</a></p>
+                                    <p>Все права защищены ©</p>
                                 </div>
                             </div>
                         </div>
