--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                             </ul>
                         </div>
                         <div class="foot__column right">
-                            <div class="foco__title foot__title">Address</div>
+                            <div class="foco__title foot__title">Адрес</div>
                             <ul class="right__list">
                                 <li class="right__link"><a href="https://yandex.ru/maps/11176/tyumen-oblast/?ll=67.063953%2C57.399082&mode=routes&rtext=57.402417%2C67.070124~57.399192%2C67.062039&rtt=pd&ruri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzE1OTMyMxJG0KDQvtGB0YHQuNGPLCDQotGO0LzQtdC90YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsINGB0LXQu9C-INCv0YDQutC-0LLQviIKDecjhkIVE5xlQg%2C%2C~ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoyMTU5NjY5NTQ4EmrQoNC-0YHRgdC40Y8sINCi0Y7QvNC10L3RgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwg0YHQtdC70L4g0K_RgNC60L7QstC-LCDRg9C70LjRhtCwINCg0LXRgdC_0YPQsdC70LjQutC4LCA3IgoNxB-GQhXGmGVC&z=17.69" target="_blank" class="a_adress">с.Ярково, ул.Республики, д.7/2</a></li>
                             </ul>
