--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                     <textarea id="" cols="30" rows="10" class="feedback__item _req form__input" name="message" placeholder="Желаемая процедура или сообщение..."></textarea>
                                     <div class="feedback__message">Можешь выбрать желаемую дату и время</div>
                                     <input type="datetime-local" class="feedback__item" name="datetime">
-                                    <button type="submit" class="feedback__item feedback__buttom" ><span>send</span></button>
+                                    <button type="submit" class="feedback__item feedback__buttom" ><span>отправить</span></button>
                                 </form>
                             </div>
                         </div>
