--- a/index.html
+++ b/index.html
@@ -107,22 +107,22 @@
                         <div class="portfolio__circle block__title-circle circle"></div>
                         <div class="portfolio__items">
                              <div class="portfolio__item wow fadeInUp">
-                                <img src="./img/kamila.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pTwo.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item wow fadeInRight">
-                                <img src="./img/kamila.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pThree.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item portfolio__item-big wow fadeInLeft">
-                                <img src="./img/kamila.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pOne.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item wow fadeInUp">
-                                <img src="./img/kamila.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pFour.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item wow fadeInRight">
-                                <img src="./img/kamila.webp" alt="" srcset="">
+                                <img src="./img/myWorks/mwOne.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item  portfolio__item-big wow fadeInLeft last_item">
-                                <img src="./img/kamila.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pSix.webp" alt="" srcset="">
                             </div>
                               
                         </div>
