--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <img src="./img/portfolio/pFour.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item wow fadeInRight">
-                                <img src="./img/myWorks/mwOne.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pFive.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item  portfolio__item-big wow fadeInLeft last_item">
                                 <img src="./img/portfolio/pSix.webp" alt="" srcset="">
@@ -181,7 +181,7 @@
                                 </div>
                             </div>
                             <div class="price__image wow fadeInRight">
-                                <img src="./img/kamila.webp" alt="" srcset="">
+                                <img src="./img/price/price.webp" alt="" srcset="">
                             </div>
                         </div>
                     </div>
