--- a/index.html
+++ b/index.html
@@ -109,22 +109,36 @@
                              <div class="portfolio__item wow fadeInUp">
                                 <img src="./img/portfolio/pTwo.webp" alt="" srcset="">
                             </div>
-                            <div class="portfolio__item wow fadeInRight">
+                            <div class="portfolio__item wow fadeInRight iztf">
                                 <img src="./img/portfolio/pThree.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item portfolio__item-big wow fadeInLeft">
                                 <img src="./img/portfolio/pOne.webp" alt="" srcset="">
                             </div>
+
                             <div class="portfolio__item wow fadeInUp">
                                 <img src="./img/portfolio/pFour.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item wow fadeInRight">
                                 <img src="./img/portfolio/pFive.webp" alt="" srcset="">
                             </div>
-                            <div class="portfolio__item  portfolio__item-big wow fadeInLeft last_item">
-                                <img src="./img/portfolio/pSix.webp" alt="" srcset="">
+                            <div class="portfolio__item portfolio__item-big wow fadeInLeft iztf">
+                                <img src="./img/portfolio/pOne.webp" alt="" srcset="">
                             </div>
-                              
+                            <div class="portfolio__item wow fadeInUp">
+                                <img src="./img/portfolio/pTwo.webp" alt="" srcset="">
+                            </div>
+                            <div class="portfolio__item wow fadeInRight">
+                                <img src="./img/portfolio/pThree.webp" alt="" srcset="">
+                            </div>
+
+                            <div class="portfolio__item wow fadeInUp iztf">
+                                <img src="./img/portfolio/pFour.webp" alt="" srcset="">
+                            </div> 
+                                <div class="portfolio__item wow fadeInRight iztf">
+                                <img src="./img/portfolio/pFive.webp" alt="" srcset="">
+                            </div>
+                             
                         </div>
                     </div>
                     <div class="price block" id="price">
