--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </li>
                     <li>
                         <a href="#" class="menu__link" data-goto=".swiper"
-                          >Мои работы</a
+                          >Примеры работ</a
                         >
                       </li>
                     <li id="touch">
@@ -113,7 +113,7 @@
                                 <img src="./img/portfolio/pThree.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item portfolio__item-big wow fadeInLeft">
-                                <img src="./img/portfolio/pOne.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pOne-big.webp" alt="" srcset="">
                             </div>
 
                             <div class="portfolio__item wow fadeInUp">
@@ -123,7 +123,7 @@
                                 <img src="./img/portfolio/pFive.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item portfolio__item-big wow fadeInLeft iztf">
-                                <img src="./img/portfolio/pOne.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pOne-big.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item wow fadeInUp">
                                 <img src="./img/portfolio/pTwo.webp" alt="" srcset="">
@@ -200,7 +200,7 @@
                         </div>
                     </div>
                     <div class="swiper mySwiper block" id="myworks">
-                        <div class="swiper__title wow fadeInLeft block__title">Мои работы</div>
+                        <div class="swiper__title wow fadeInLeft block__title">Примеры работ</div>
                         <div class="swiper-wrapper wow fadeIn">
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
